# AlphaEvolveWriter

./: README.md
kraken/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
kraken/kraken/api/: __init__.py  app.py  endpoints.py  middleware.py  models.py
kraken/kraken/ml/: __init__.py  config.py  data_preparation.py  inference.py
kraken/tests/: __init__.py  test_api.py
